// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scaffold integration (nextjs) > ssr mode: no export config, no copy script, ssr docs 1`] = `
[
  ".env.example",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "AGENTS.md",
  "app/globals.css",
  "app/layout.tsx",
  "app/login/page.tsx",
  "app/page.test.tsx",
  "app/page.tsx",
  "app/register/page.tsx",
  "CLAUDE.md",
  "components.json",
  "components/HeaderNav.tsx",
  "components/ui/button.tsx",
  "components/ui/card.tsx",
  "components/ui/input.tsx",
  "components/ui/label.tsx",
  "e2e/home.spec.ts",
  "eslint.config.js",
  "lib/auth.tsx",
  "lib/logger.test.ts",
  "lib/logger.ts",
  "lib/pocketbase-types.ts",
  "lib/pocketbase.ts",
  "lib/utils.ts",
  "next-env.d.ts",
  "next.config.ts",
  "package.json",
  "pb_hooks/admin.pb.js",
  "pb_hooks/main.pb.js",
  "pb_migrations/1700000000_create_posts.js",
  "pb_migrations/1700000001_configure_auth.js",
  "playwright.config.ts",
  "postcss.config.mjs",
  "README.md",
  "tsconfig.json",
  "vitest.config.ts",
  "vitest.setup.ts",
]
`;

exports[`scaffold integration (nextjs) > static mode: expected tree, export config, and pb_public copy script 1`] = `
[
  ".env.example",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "AGENTS.md",
  "app/globals.css",
  "app/layout.tsx",
  "app/login/page.tsx",
  "app/page.test.tsx",
  "app/page.tsx",
  "app/register/page.tsx",
  "CLAUDE.md",
  "components.json",
  "components/HeaderNav.tsx",
  "components/ui/button.tsx",
  "components/ui/card.tsx",
  "components/ui/input.tsx",
  "components/ui/label.tsx",
  "e2e/home.spec.ts",
  "eslint.config.js",
  "lib/auth.tsx",
  "lib/logger.test.ts",
  "lib/logger.ts",
  "lib/pocketbase-types.ts",
  "lib/pocketbase.ts",
  "lib/utils.ts",
  "next-env.d.ts",
  "next.config.ts",
  "package.json",
  "pb_hooks/admin.pb.js",
  "pb_hooks/main.pb.js",
  "pb_migrations/1700000000_create_posts.js",
  "pb_migrations/1700000001_configure_auth.js",
  "playwright.config.ts",
  "postcss.config.mjs",
  "README.md",
  "scripts/pb-public.mjs",
  "tsconfig.json",
  "vitest.config.ts",
  "vitest.setup.ts",
]
`;

exports[`scaffold integration (react-router) > produces the expected file tree with password auth 1`] = `
[
  ".env.example",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "AGENTS.md",
  "app/app.css",
  "app/components/ui/button.tsx",
  "app/components/ui/card.tsx",
  "app/components/ui/input.tsx",
  "app/components/ui/label.tsx",
  "app/lib/auth.tsx",
  "app/lib/logger.test.ts",
  "app/lib/logger.ts",
  "app/lib/pocketbase-types.ts",
  "app/lib/pocketbase.ts",
  "app/lib/utils.ts",
  "app/root.tsx",
  "app/routes.ts",
  "app/routes/home.test.tsx",
  "app/routes/home.tsx",
  "app/routes/login.tsx",
  "app/routes/register.tsx",
  "CLAUDE.md",
  "components.json",
  "e2e/home.spec.ts",
  "eslint.config.js",
  "package.json",
  "pb_hooks/admin.pb.js",
  "pb_hooks/main.pb.js",
  "pb_migrations/1700000000_create_posts.js",
  "pb_migrations/1700000001_configure_auth.js",
  "playwright.config.ts",
  "react-router.config.ts",
  "README.md",
  "scripts/pb-public.mjs",
  "tsconfig.json",
  "vite.config.ts",
  "vitest.config.ts",
  "vitest.setup.ts",
]
`;

exports[`scaffold integration (sveltekit) > produces the expected file tree with password auth 1`] = `
[
  ".env.example",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "AGENTS.md",
  "CLAUDE.md",
  "e2e/home.spec.ts",
  "eslint.config.js",
  "package.json",
  "pb_hooks/admin.pb.js",
  "pb_hooks/main.pb.js",
  "pb_migrations/1700000000_create_posts.js",
  "pb_migrations/1700000001_configure_auth.js",
  "playwright.config.ts",
  "README.md",
  "src/app.css",
  "src/app.d.ts",
  "src/app.html",
  "src/lib/auth.svelte.ts",
  "src/lib/components/ui/button.svelte",
  "src/lib/components/ui/card-content.svelte",
  "src/lib/components/ui/card-description.svelte",
  "src/lib/components/ui/card-header.svelte",
  "src/lib/components/ui/card-title.svelte",
  "src/lib/components/ui/card.svelte",
  "src/lib/components/ui/input.svelte",
  "src/lib/components/ui/label.svelte",
  "src/lib/logger.test.ts",
  "src/lib/logger.ts",
  "src/lib/pocketbase-types.ts",
  "src/lib/pocketbase.ts",
  "src/lib/utils.ts",
  "src/routes/+layout.svelte",
  "src/routes/+layout.ts",
  "src/routes/+page.svelte",
  "src/routes/login/+page.svelte",
  "src/routes/page.test.ts",
  "src/routes/register/+page.svelte",
  "svelte.config.js",
  "tsconfig.json",
  "vite.config.ts",
  "vitest.config.ts",
  "vitest.setup.ts",
]
`;

exports[`scaffold integration (vite-react) > produces the expected file tree with password auth 1`] = `
[
  ".env.example",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "AGENTS.md",
  "CLAUDE.md",
  "components.json",
  "e2e/home.spec.ts",
  "eslint.config.js",
  "index.html",
  "package.json",
  "pb_hooks/admin.pb.js",
  "pb_hooks/main.pb.js",
  "pb_migrations/1700000000_create_posts.js",
  "pb_migrations/1700000001_configure_auth.js",
  "playwright.config.ts",
  "README.md",
  "src/App.tsx",
  "src/components/Layout.tsx",
  "src/components/ui/button.tsx",
  "src/components/ui/card.tsx",
  "src/components/ui/input.tsx",
  "src/components/ui/label.tsx",
  "src/index.css",
  "src/lib/auth.tsx",
  "src/lib/logger.test.ts",
  "src/lib/logger.ts",
  "src/lib/pocketbase-types.ts",
  "src/lib/pocketbase.ts",
  "src/lib/utils.ts",
  "src/main.tsx",
  "src/pages/HomePage.test.tsx",
  "src/pages/HomePage.tsx",
  "src/pages/LoginPage.tsx",
  "src/pages/RegisterPage.tsx",
  "tsconfig.json",
  "vite.config.ts",
  "vitest.config.ts",
  "vitest.setup.ts",
]
`;
